change for all page-style

--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>text to speak</title>
 </head>
 
 <body>
-    <div class="text-to-speak">
-        <h2>text to speak</h2>
-        <textarea name="" id="txt" cols="30" rows="5" placeholder="inter text"></textarea>
-        <button id="btn">speak</button>
+    <div class="content">
+        <div class="text-to-speak">
+            <h2>text to speak</h2>
+            <textarea name="" id="txt" placeholder="inter text"></textarea>
+            <button id="btn">speak</button>
+        </div>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="1"
+            d="M0,96L60,117.3C120,139,240,181,360,192C480,203,600,181,720,181.3C840,181,960,203,1080,197.3C1200,192,1320,160,1380,144L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+        </path>
+    </svg>
     <script src="./index.js"></script>
 </body>
 
